@@ -15,6 +15,7 @@ sunuo (0.3.0) unstable; urgency=low
   * moved bootstrapping code to Bootstrap.cs
   * change to base directory
   * GameServerListConfig.GameServers returns IList
+  * removed zlib workaround which should be in scripts
   * debian: symlink base/Data to /etc/sunuo
   * debian: symlink base/var/log to /var/log/sunuo
   * debian: install SunUO.exe.config in /etc/sunuo/
